responsive playmode disconnected

--- a/front/js/components/playModeComponent/playModeComponent.html
+++ b/front/js/components/playModeComponent/playModeComponent.html
@@ -1,6 +1,11 @@
 <style>
   @import url("./js/components/playModeComponent/playModeComponent.css");
 </style>
+
+<div class="home-btn" id="home-link">
+    home <i class='fa fa-home'></i>
+</div>
+
 <div>
     <div class="centered">
     <h1 class="title">Choose your game mode</h1>
