--- a/front/js/components/playModeComponent/playModeComponent.css
+++ b/front/js/components/playModeComponent/playModeComponent.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 .container {
     display: flex;
     justify-content: center;
@@ -12,6 +14,7 @@ button {
     border-radius: 5px;
     margin: 1em;
     background-color: #C0EEE4;
+    width: 350px;
 }
 
 .title {
@@ -34,4 +37,37 @@ button {
     justify-content: center;
     margin-bottom: 30px;
 }
+
+.home-btn {
+    width: auto;
+    padding: 10px;
+    background-color: #C0EEE4;
+    color: #100f0f;
+    font-size: 20px;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 30px;
+    left: 30px;
+}
+
+@media screen and (max-width: 500px) {
+    .container {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    .title {
+        font-size: 26px;
+    }
+    .centered {
+        margin-bottom: 20px;
+    }
+    button {
+        font-size: 1em;
+        padding: 1em 1em;
+        width: 200px;
+    }
+}
+
 
