--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -37,7 +37,7 @@
             <div class="iocn-link">
                 <a href="#" class="alter">
                     <i class='fa fa-user-plus'></i>
-                    <span class="link_name">Invitations</span>
+                    <span class="link_name">Invites</span>
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
             </div>
@@ -60,7 +60,7 @@
         <li>
             <a href="#" class="alter">
                 <i class='fa fa-plus'></i>
-                <input class="link_name" id="input-friend" type="text" placeholder="Add Friend ...">
+                <input class="link_name" id="input-friend" type="text" placeholder="Add ...">
 
             </a>
         </li>
