--- a/front/js/components/gameComponent/gameComponent.css
+++ b/front/js/components/gameComponent/gameComponent.css
@@ -295,5 +295,198 @@
   border-radius: 50%;
   border: 3px solid rgb(10, 100, 73);
 }
+@media (max-width: 400px) {
+
+  element.style {
+  }
+  .tile {
+    height: 40px;
+    width: 80px;
+    margin: 5px;
+    background-color: white;
+    border-radius: 50%;
+    border: 3px solid rgb(10, 100, 73);
+  }
+  #board {
+    height: 300px;
+    width: 300px;
+    background-color: rgb(134, 200, 188);
+    /* border: 1px solid navy; */
+    /* margin: 0; */
+    margin-bottom: 60px;
+    margin-left: 67px;
+    padding-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    border: 6px solid rgb(10, 100, 73);
+    border-radius: 25px;
+  }
+  #winner {
+    font-size: 40px;
+    font-family: 'Helvetica Neue', sans-serif;
+    color: #4CAF50;
+    text-align: center;
+    background-color: transparent;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 10vh; */
+    position: absolute;
+    left: 130px;
+    top: 150px;
+  }
+  .chat-box {
+    position: fixed;
+    bottom: 44px;
+    right: 25px;
+    width: 100px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    z-index: 9999;
+  }
+  .chat-messages {
+    height: 50px;
+    overflow: hidden;
+    padding: 1px;
+  }
+  .chat-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+  .chat-input {
+    border: none;
+    outline: none;
+    background-color: rgb(134, 200, 188);
+    color: #fff;
+    /* padding: 9px 15px; */
+    border-radius: 10px;
+    font-size: 11px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-top: 0px;
+    margin-right: 3px;
+    cursor: pointer;
+    padding-top: 1px;
+    padding-bottom: 3px;
+    padding-right: 4px;
+    padding-left: 8px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .mute-icon {
+    position: absolute;
+    top: 10px;
+    left: 32px;
+    background-color: rgb(134, 200, 188);
+    color: #fff;
+    width: 40px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .red-piece {
+    background-color: rgb(255, 158, 158);
+  }
+
+  .yellow-piece {
+    background-color: rgb(248, 249, 136);
+  }
+  .turn-text{
+    font-size: 20px;
+
+  }
+  .redCircle{
+    height: 35px;
+    width: 35px;
+    margin: 10px;
+    background-color: rgb(255, 158, 158);
+    border-radius: 50%;
+    border: 3px solid rgb(10, 100, 73);
+  }
+
+  .yellowCircle{
+    height: 35px;
+    width: 35px;
+    margin: 10px;
+    background-color: rgb(248, 249, 136);
+    border-radius: 50%;
+    border: 3px solid rgb(10, 100, 73);
+  }
+  .turn {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #ffffff;
+    position: fixed;
+    left: 100px;
+    bottom: 120px;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+
+
+  .bubble {
+    position: fixed;
+    font-family: sans-serif;
+    font-size: 10px;
+    line-height: 23px;
+    width: 60px;
+    background: #fff;
+    /* border-radius: 40px; */
+    padding: 5px 3px 5px 5px;
+    text-align: center;
+    color: #000;
+    right: 30px;
+    bottom: 740px;
+  }
+  .bubble-bottom-left:before {
+    content: "";
+    width: 2px;
+    height: 2px;
+    position: absolute;
+    border-left: 12px solid #fff;
+    border-right: 1px solid transparent;
+    border-top: 1px solid #fff;
+    border-bottom: 20px solid transparent;
+    left: 25px;
+    bottom: -15px;
+  }
+  .bubble1 {
+    position: fixed;
+    font-family: sans-serif;
+    font-size: 10px;
+    line-height: 23px;
+    width: 90px;
+    background: #fff;
+    border-radius: 40px;
+    padding: 5px 3px 5px 5px;
+    text-align: center;
+    color: #000;
+    left: 70px;
+    bottom: 740px;
+  }
+  .bubble-bottom-left1:before {
+    content: "";
+    width: 2px;
+    height: 2px;
+    position: absolute;
+    border-left: 12px solid #fff;
+    border-right: 1px solid transparent;
+    border-top: 1px solid #fff;
+    border-bottom: 20px solid transparent;
+    left: 25px;
+    bottom: -15px;
+  }
+
+}
 
 
