--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -1,6 +1,7 @@
 <style>
     @import url("./js/components/profileComponent/profileComponent.css");
 </style>
+<body>
 <div class="container">
     <div class="profile">
         <div class="user-info">
@@ -126,3 +127,4 @@
     </div>
 
 </div>
+</body>
