--- a/front/js/components/loadingPageComponent/loadingPageComponent.css
+++ b/front/js/components/loadingPageComponent/loadingPageComponent.css
@@ -83,4 +83,16 @@ body {
     transition: opacity 0.4s ease-out;
 }
 
+@media screen and (max-width: 600px) {
+    .loader{
+        width: 10%;
+        height: 0%;
+    }
+    .lettre{
+        font-size: 10px;
+        letter-spacing: 5px;
+        margin-bottom: 50px;
+    }
+
+}
 
