--- a/front/js/components/sideBarComponent/sideBarComponent.css
+++ b/front/js/components/sideBarComponent/sideBarComponent.css
@@ -352,6 +352,10 @@
         white-space: nowrap;
         transition: all 0.3s ease;
     }
+    .fa-chevron-down{
+        font-size: 10px;
+
+    }
 
     element.style {
     }
