--- a/front/js/components/popUpComponent/popUpComponent.css
+++ b/front/js/components/popUpComponent/popUpComponent.css
@@ -58,3 +58,26 @@
     border-radius: 8px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 500px), (max-height: 500px){
+    .modal-content {
+        padding: 10px;
+        width: 10%;
+    }
+    h2{
+        font-size: 10px;
+    }
+    p{
+        font-size: 8px;
+    }
+    .button1, button2{
+        font-size: 8px;
+        padding: 5px 10px;
+    }
+
+    .button2{
+        font-size: 8px;
+        padding: 5px 10px;
+    }
+}
+
