--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -123,6 +123,7 @@ body {
 }
 
 .trophee-list {
+    overflow-y: scroll;
     height: 80%;
     box-shadow: 0 0 5px #808080;
 }
@@ -248,9 +249,27 @@ th {
     }
 }
 
-@media screen and (max-width: 1500px) and (min-width: 800px){
-    .body{
+@media screen and (max-width: 1000px) and (min-width: 800px), (max-height: 500px){
+    .body {
         height: auto;
+    }
+    .profile {
+        margin: 600px 0px 50px 50px;
+        width: 400px;
+    }
+    .profile {
+        margin-bottom: 0;
+        font-size: 12px;
+    }
+    h1 {
+        font-size: 10px;
+        margin-bottom: 0;
+    }
+    .rank-img {
+        float: left;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
     }
     .container{
         flex-direction: column;
@@ -270,9 +289,12 @@ th {
         width: 70%;
     }
     .history {
-        width: 500px;
+        width: 400px;
         margin-left: 50px;
         margin-bottom: 30px;
+    }
+    .history h2 {
+        font-size: 16px;
     }
     .stat {
         flex-basis: 100%;
@@ -308,8 +330,15 @@ th {
     }
 }
 
-@media screen and (max-width: 1500px) and (min-width: 800px) {
-
+@media screen and (max-height: 700px) {
+    .trophee-list {
+        height: 200px;
+    }
+}
+@media screen and (max-height: 600px) {
+    .trophee-list {
+        height: 100px;
+    }
 }
 
 
