--- a/front/js/components/registerPageComponent/registerPageComponent.css
+++ b/front/js/components/registerPageComponent/registerPageComponent.css
@@ -35,14 +35,18 @@ input[type="text"], input[type="email"], input[type="password"] {
 }
 
 .sub {
-    width: 100%;
-    padding: 16px;
+    width: auto;
+    padding: 20px 40px;
     background-color: #4CAF50;
     color: white;
     font-size: 20px;
     border-radius: 10px;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .sub:hover {
@@ -80,18 +84,39 @@ input[type="text"], input[type="email"], input[type="password"] {
         padding: 10px;
         border-radius: 5px;
         border: 1px solid #ccc;
-        font-size: 16px;
+        font-size: 12px;
     }
     #signup-btn{
         width: auto;
         height: 40px;
         display: flex;
+        padding: 10px 20px;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        font-size: 12px;
     }
 
     .home-btn {
         font-size: 15px;
+    }
+}
+
+@media screen and (max-height: 500px) {
+    form {
+        padding: 20px;
+        height: 250px;
+    }
+
+    h1 {
+        font-size: 26px;
+    }
+    input[type="text"], input[type="email"], input[type="password"] {
+        padding: 10px;
+        font-size: 12px;
+    }
+    .sub{
+        padding: 10px 20px;
+
     }
 }
