--- a/front/js/components/introMenuComponent/introMenuComponent.css
+++ b/front/js/components/introMenuComponent/introMenuComponent.css
@@ -214,5 +214,56 @@
     z-index: -1;
 }
 
+@media screen and (max-height: 500px) {
+
+    .little-card:nth-child(2) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 10px;
+    }
+
+}
+
+@media screen and (max-width: 750px) {
+
+    .big-card-wrapper {
+        width: 200px;
+        height: 200px;
+    }
+
+    .big-card{
+        background-color: #ffffff00;
+        box-shadow: 0px 0px 0px 0px #cccccc7a;
+    }
+
+    .little-card {
+        width: 25vmin;
+    }
+
+    .active-waves{
+        animation: 2s infinite;
+        cursor: pointer;
+    }
+
+    .little-card:nth-child(2) a {
+        font-size: 10px;
+        left: 55%;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 10px;
+        left: 55%;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 10px;
+        left: 55%;
+    }
+
+
+
+}
 
 
