--- a/front/js/components/loggedInMenuComponent/loggedInMenuComponent.css
+++ b/front/js/components/loggedInMenuComponent/loggedInMenuComponent.css
@@ -127,11 +127,11 @@
 .big-card-wrapper{
     width: 45vmin;
     height: 45vh;
-    
+
 
     border-radius: 40vmin;
     background-color: rgb(192, 238, 228);
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -175,7 +175,7 @@
 
 .little-card:nth-child(2) a{
     display: block;
-    transform: skew(-20deg); 
+    transform: skew(-20deg);
     color: inherit;
 }
 
@@ -185,7 +185,7 @@
 }
 
 .little-card:nth-child(3) a{
-    display: block; 
+    display: block;
 }
 
 .little-card:nth-child(4){
@@ -213,4 +213,61 @@
     z-index: -1;
 }
 
+
+@media screen and (max-height: 500px) {
+
+    .little-card:nth-child(2) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 10px;
+    }
+
+}
+
+@media screen and (max-width: 750px) {
+
+    .big-card-wrapper {
+        width: 200px;
+        height: 200px;
+    }
+
+    .big-card{
+        background-color: #ffffff00;
+        box-shadow: 0px 0px 0px 0px #cccccc7a;
+    }
+
+    .big-card card{
+        left : 20%
+    }
+
+
+    .little-card {
+        width: 25vmin;
+    }
+
+    .active-waves{
+        animation: 2s infinite;
+        cursor: pointer;
+    }
+
+    .little-card:nth-child(2) a {
+        font-size: 10px;
+        left: 55%;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 10px;
+        left: 55%;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 10px;
+        left: 55%;
+    }
+
+
+
+}
 
