--- a/cordova/www/js/components/introMenuComponent/introMenuComponent.css
+++ b/cordova/www/js/components/introMenuComponent/introMenuComponent.css
@@ -10,6 +10,7 @@
 
 .active-waves{
     animation: waves 2s infinite;
+    cursor: pointer;
 }
 
 @keyframes waves {
@@ -211,6 +212,55 @@
 
 .little-card a{
     z-index: -1;
+}
+
+@media screen and (max-height: 500px) {
+
+    .little-card:nth-child(2) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 10px;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 10px;
+    }
+
+}
+
+@media screen and (max-width: 750px) {
+
+    .big-card-wrapper {
+        width: 200px;
+        height: 200px;
+    }
+
+    .big-card{
+        background-color: #ffffff00;
+        box-shadow: 0px 0px 0px 0px #cccccc7a;
+    }
+
+    .little-card {
+        width: 25vmin;
+    }
+
+    .active-waves{
+        animation: 2s infinite;
+        cursor: pointer;
+    }
+
+    .little-card:nth-child(2) a {
+        font-size: 15px;
+    }
+    .little-card:nth-child(3) a {
+        font-size: 15px;
+    }
+    .little-card:nth-child(4) a {
+        font-size: 15px;
+    }
+
+
+
 }
 
 
