--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -2,6 +2,9 @@
   @import url("./js/components/gameComponent/gameComponent.css");
 </style>
 
+<div class="home-btn" id="home-link">
+  home <i class='fa fa-home'></i>
+</div>
 
 <div class="container">
   <!--
