--- a/cordova/www/js/components/gameComponent/gameComponent.css
+++ b/cordova/www/js/components/gameComponent/gameComponent.css
@@ -295,6 +295,27 @@
   border-radius: 50%;
   border: 3px solid rgb(10, 100, 73);
 }
+
+.home-btn {
+  width: auto;
+  padding: 10px;
+  background-color: #fafafa;
+  color: #100f0f;
+  font-size: 20px;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 30px;
+  left: 30px;
+}
+
+@media screen and (max-width: 500px) {
+  .home-btn {
+    font-size: 15px;
+  }
+}
+
 @media (max-width: 550px) {
 
   element.style {
