--- a/cordova/www/js/components/gameComponent/gameComponent.html
+++ b/cordova/www/js/components/gameComponent/gameComponent.html
@@ -2,6 +2,9 @@
   @import url("./js/components/gameComponent/gameComponent.css");
 </style>
 
+<div class="home-btn" id="home-link">
+  home <i class='fa fa-home'></i>
+</div>
 
 <div class="container">
   <!--
@@ -31,71 +34,71 @@
 <div id="wrapper">
   <table>
     <thead>
-      <tr class="column-selector">
-        <td class="column"><span class="hidden arrow" column=0>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=1>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=2>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=3>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=4>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=5>&darr;</span></td>
-        <td class="column"><span class="hidden arrow" column=6>&darr;</span></td>
-      </tr>
+    <tr class="column-selector">
+      <td class="column"><span class="hidden arrow" column=0>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=1>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=2>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=3>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=4>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=5>&darr;</span></td>
+      <td class="column"><span class="hidden arrow" column=6>&darr;</span></td>
+    </tr>
     </thead>
     <tbody id="board">
-      <tr>
-        <td class="tile" row=0 column=0></td>
-        <td class="tile" row=0 column=1></td>
-        <td class="tile" row=0 column=2></td>
-        <td class="tile" row=0 column=3></td>
-        <td class="tile" row=0 column=4></td>
-        <td class="tile" row=0 column=5></td>
-        <td class="tile" row=0 column=6></td>
-      </tr>
-      <tr>
-        <td class="tile" row=1 column=0></td>
-        <td class="tile" row=1 column=1></td>
-        <td class="tile" row=1 column=2></td>
-        <td class="tile" row=1 column=3></td>
-        <td class="tile" row=1 column=4></td>
-        <td class="tile" row=1 column=5></td>
-        <td class="tile" row=1 column=6></td>
-      </tr>
-      <tr>
-        <td class="tile" row=2 column=0></td>
-        <td class="tile" row=2 column=1></td>
-        <td class="tile" row=2 column=2></td>
-        <td class="tile" row=2 column=3></td>
-        <td class="tile" row=2 column=4></td>
-        <td class="tile" row=2 column=5></td>
-        <td class="tile" row=2 column=6></td>
-      </tr>
-      <tr>
-        <td class="tile" row=3 column=0></td>
-        <td class="tile" row=3 column=1></td>
-        <td class="tile" row=3 column=2></td>
-        <td class="tile" row=3 column=3></td>
-        <td class="tile" row=3 column=4></td>
-        <td class="tile" row=3 column=5></td>
-        <td class="tile" row=3 column=6></td>
-      </tr>
-      <tr>
-        <td class="tile" row=4 column=0></td>
-        <td class="tile" row=4 column=1></td>
-        <td class="tile" row=4 column=2></td>
-        <td class="tile" row=4 column=3></td>
-        <td class="tile" row=4 column=4></td>
-        <td class="tile" row=4 column=5></td>
-        <td class="tile" row=4 column=6></td>
-      </tr>
-      <tr>
-        <td class="tile" row=5 column=0></td>
-        <td class="tile" row=5 column=1></td>
-        <td class="tile" row=5 column=2></td>
-        <td class="tile" row=5 column=3></td>
-        <td class="tile" row=5 column=4></td>
-        <td class="tile" row=5 column=5></td>
-        <td class="tile" row=5 column=6></td>
-      </tr>
+    <tr>
+      <td class="tile" row=0 column=0></td>
+      <td class="tile" row=0 column=1></td>
+      <td class="tile" row=0 column=2></td>
+      <td class="tile" row=0 column=3></td>
+      <td class="tile" row=0 column=4></td>
+      <td class="tile" row=0 column=5></td>
+      <td class="tile" row=0 column=6></td>
+    </tr>
+    <tr>
+      <td class="tile" row=1 column=0></td>
+      <td class="tile" row=1 column=1></td>
+      <td class="tile" row=1 column=2></td>
+      <td class="tile" row=1 column=3></td>
+      <td class="tile" row=1 column=4></td>
+      <td class="tile" row=1 column=5></td>
+      <td class="tile" row=1 column=6></td>
+    </tr>
+    <tr>
+      <td class="tile" row=2 column=0></td>
+      <td class="tile" row=2 column=1></td>
+      <td class="tile" row=2 column=2></td>
+      <td class="tile" row=2 column=3></td>
+      <td class="tile" row=2 column=4></td>
+      <td class="tile" row=2 column=5></td>
+      <td class="tile" row=2 column=6></td>
+    </tr>
+    <tr>
+      <td class="tile" row=3 column=0></td>
+      <td class="tile" row=3 column=1></td>
+      <td class="tile" row=3 column=2></td>
+      <td class="tile" row=3 column=3></td>
+      <td class="tile" row=3 column=4></td>
+      <td class="tile" row=3 column=5></td>
+      <td class="tile" row=3 column=6></td>
+    </tr>
+    <tr>
+      <td class="tile" row=4 column=0></td>
+      <td class="tile" row=4 column=1></td>
+      <td class="tile" row=4 column=2></td>
+      <td class="tile" row=4 column=3></td>
+      <td class="tile" row=4 column=4></td>
+      <td class="tile" row=4 column=5></td>
+      <td class="tile" row=4 column=6></td>
+    </tr>
+    <tr>
+      <td class="tile" row=5 column=0></td>
+      <td class="tile" row=5 column=1></td>
+      <td class="tile" row=5 column=2></td>
+      <td class="tile" row=5 column=3></td>
+      <td class="tile" row=5 column=4></td>
+      <td class="tile" row=5 column=5></td>
+      <td class="tile" row=5 column=6></td>
+    </tr>
     </tbody>
   </table>
 
