--- a/cordova/www/js/components/registerPageComponent/registerPageComponent.css
+++ b/cordova/www/js/components/registerPageComponent/registerPageComponent.css
@@ -56,8 +56,8 @@ input[type="text"], input[type="email"], input[type="password"] {
 .home-btn {
     width: auto;
     padding: 8px 20px;
-    background-color: rgb(134, 200, 188);
-    color: #ffffff;
+    background-color: white;
+    color: #4CAF50;
     font-size: 14px;
     border-radius: 10px;
     justify-content: center;
