--- a/front/js/components/playModeComponent/playModeComponent.css
+++ b/front/js/components/playModeComponent/playModeComponent.css
@@ -40,16 +40,16 @@ button {
 
 .home-btn {
     width: auto;
-    padding: 10px;
-    background-color: #C0EEE4;
-    color: #100f0f;
-    font-size: 20px;
+    padding: 8px 20px;
+    background-color: rgb(134, 200, 188);
+    color: #ffffff;
+    font-size: 14px;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 30px;
-    left: 30px;
+    left: 50px;
 }
 
 @media screen and (max-width: 500px) {
