--- a/front/js/components/gameChatComponent/gameChatComponent.css
+++ b/front/js/components/gameChatComponent/gameChatComponent.css
@@ -70,9 +70,22 @@ li.message::marker {
 @media (max-width:500px ) {
     .chat-box {
         position: fixed;
+        bottom: 2vh;
+        right: 10px;
+        width: 320px;
+        height: 350px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        overflow: hidden;
+        scrollbar-width: thin;
+        background-color: white;
+        z-index: 9000;
+    }
+    .above-keyboard{
+        position: fixed;
         bottom: 350px;
         right: 10px;
-        width: 300px;
+        width: 320px;
         height: 350px;
         border: 1px solid #ccc;
         border-radius: 10px;
