--- a/front/js/components/gameChatComponent/gameChatComponent.css
+++ b/front/js/components/gameChatComponent/gameChatComponent.css
@@ -159,3 +159,27 @@ li.message::marker {
     }
 
 }
+
+
+.chat-boxjn {
+    position: fixed;
+    bottom: 58vh;
+    right: 10px;
+    width: 47vw;
+    height: 39vh;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    scrollbar-width: thin;
+    background-color: white;
+    z-index: 9000;
+}
+
+
+.chat-inputjn {
+    height: 3%;
+    display: flex;
+    align-items: center;
+    padding: 0px;
+    background-color: white;
+}
